--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <h1>LP 2 Exam version control system</h1>
+    <p>Experiment: Version Control system</p>
+    <p>Create Repo and push it to the remote repo github</p>
 </body>
 </html>
